Fixing li margin and improving readability

--- a/Portfolio/styles/base.css
+++ b/Portfolio/styles/base.css
@@ -109,7 +109,7 @@ ul.menuLinks.open {
 .contact ul {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    margin: 0 auto;
+    margin: 0 1rem;
     padding: 1rem 0;
     list-style: none;
 
